# ElasticFusion

./: build.sh
Core/src/: CMakeLists.txt
Core/src/Utils/: GPUConfig.h
GUI/src/: CMakeLists.txt  MainController.cpp
GUI/src/Tools/: LiveLogReader.cpp  ZedInterface.cpp
png_to_klg/: associate.py  gen.py  random_objects.py
